--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "browser-sync": "^2.2.1",
     "cheerio": "^0.20.0",
     "child-process-promise": "^1.1.0",
+    "concurrent-transform": "^1.0.0",
     "eco": "^1.0.3",
     "grunt": "^0.4.5",
     "gulp": "^3.8.10",
+    "gulp-awspublish": "^3.0.1",
     "gulp-clean": "^0.3.2",
     "gulp-cli": "^1.2.1",
     "gulp-load-plugins": "^1.2.0",
