--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ checkout:
     - git submodule sync
 dependencies:
   override:
-    - pip install sphinx
+    - pip install sphinx==1.3.6
     - npm install
     - npm rebuild node-sass
 deployment:
