--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,9 @@ dependencies:
     - pip install sphinx==1.3.6
     - npm install
     - npm rebuild node-sass
+test:
+  override:
+    - echo "No test"
 deployment:
   staging:
     branch: master
