--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "metalsmith-register-helpers": "^0.1.2",
     "metalsmith-static": "0.0.5",
     "minimatch": "^3.0.0",
+    "ncp": "^2.0.0",
     "node-bourbon": "^4.2.3",
     "run-sequence": "^1.1.5",
     "shell": "^0.3.2",
