--- a/circle.yml
+++ b/circle.yml
@@ -28,9 +28,8 @@ deployment:
       - git add src/locale
       - git config user.name "CircleCI"
       - git config user.email "nobody@monaca.io"
-      - git commit -v -m 'Updated po files.'
-      - git remote set-url --push origin "$GITHUB_URL"
-      - git push origin master
+      - git remote set-url --push origin "$GITHUB_URL" 
+      - (git commit -v -m 'Updated po files.' && git push origin master) || /bin/true
   production:
     branch: production
     commands:
