[update] fix test toctree

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monaca-docs",
   "version": "1.0.0",
-  "description": "Source codes for Monaca Document (http://docs.monaca.mobi)",
+  "description": "Source codes for Monaca Document (https://docs.monaca.io)",
   "main": "index.js",
   "devDependencies": {
     "browser-sync": "^2.2.1",
